--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,18 @@
     <string name="title_activity_cart">Cart</string>
     <string name="title_activity_buy">Checkout</string>
     <string name="title_activity_offers">Directory</string>
+
+    <string name="name">Name</string>
+    <string name="phone">Phone</string>
+    <string name="email">Email</string>
+    <string name="address">Address</string>
+    <string name="city">City</string>
+    <string name="street">Street</string>
+    <string name="haus">Haus</string>
+    <string name="porch">Porch</string>
+    <string name="aprt">Aprt</string>
+    <string name="order_amount">Order amount</string>
+    <string name="confirm">Confirm</string>
+
+
 </resources>
